# notes-agent

./: .env.example  .gitignore  HOMEBREW_INSTALL.md  HOMEBREW_SUMMARY.md  LICENSE  MANIFEST.in  QUICK_START_HOMEBREW.md  README.md  pyproject.toml  requirements.txt
homebrew/: obsidian-notes-agent-simple.rb  obsidian-notes-agent.rb
obsidian_notes_agent/: __init__.py  agent.py  cli.py  config.py
obsidian_notes_agent/tools/: __init__.py  note_tools.py
obsidian_notes_agent/utils/: __init__.py  content_analyzer.py  content_loader.py  obsidian.py  vector_store.py
scripts/: cleanup.sh  create-release.sh  security-check.sh
